--- a/templates/webcheck.html
+++ b/templates/webcheck.html
@@ -1,4 +1,9 @@
 {% extends "index.html" %}
 {% block content %}
-<p>{{result}}</p>
+<div class="border-result">
+<div class="box" style="background-color: black;">
+    <h4 style="color: white;"><b>Results</b></h4>
+<row style="color: white;">{{result}}</row>
+</div>
+</div>
 {% endblock %}
