--- a/templates/index.html
+++ b/templates/index.html
@@ -81,7 +81,12 @@ li {
     <div class="row">
       <div class="one-half column" style="margin-top: 10%">
         <h1>Welcome to the WebChecker.</h1>
-        <h4>Please input a website to check and it will return all of its headers</h4>
+        <h4>Please input a website to check and it will return:</h4>
+        <ul>
+          <li>The server its on</li>
+          <li>Last time it was modified</li>
+          <li>And the content type of the site</li> 
+        </ul>
         <br>
         <div class="container">
           <form method="POST">
